--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
        <div id="main">
              <div id="panel">
                 <div id="ptop">
-                    <div class="elem">
+                    <div class="elem"></div>
                     <h4>Hit</h4>
                     <div id = "hitval" class="box">5</div>
                     </div>
